--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -2,4 +2,8 @@
 <resources>
     <!-- The duration (in milliseconds) of a very short animation. -->
     <integer name="config_veryShortAnimTime">150</integer>
+
+    <!-- Stop details fab speed dial item's ids -->
+    <item type="id" name="stop_details_fab_favorite"/>
+    <item type="id" name="stop_details_fab_reminder"/>
 </resources>
