--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,6 @@
 <resources>
+    <!--<style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar" />-->
+    <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
     <style name="AppTheme" parent="Theme.Cyanea.Light.DarkActionBar" />
     <style name="AppTheme.NoActionBar" parent="Theme.Cyanea.Light.NoActionBar" />
 </resources>
