--- a/app/src/main/res/layout/main_container.xml
+++ b/app/src/main/res/layout/main_container.xml
@@ -7,6 +7,14 @@
         android:layout_height="match_parent"
         tools:context="com.jorkoh.transportezaragozakt.MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/ActionBarTheme"
+            app:layout_constraintTop_toTopOf="parent"/>
+
     <FrameLayout
         android:id="@+id/nav_host_container"
         android:layout_width="match_parent"
@@ -15,10 +23,11 @@
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
+            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
