--- a/app/src/main/res/layout/stop_details.xml
+++ b/app/src/main/res/layout/stop_details.xml
@@ -30,9 +30,10 @@
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <TextView
+            android:id="@+id/no_data_text"
+            android:textColor="?colorOnBackground"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/no_data_text"
             android:text="@string/no_data_available"
             android:gravity="center"
             app:layout_constraintTop_toTopOf="parent"
@@ -44,9 +45,10 @@
             app:layout_constraintBottom_toTopOf="@+id/no_data_suggestions_text"
             android:layout_marginBottom="16dp" app:layout_constraintVertical_chainStyle="packed"/>
     <TextView
+            android:id="@+id/no_data_suggestions_text"
+            android:textColor="?colorOnBackground"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/no_data_suggestions_text"
             android:text="@string/no_data_available_suggestions"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
@@ -63,6 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
+            android:alpha="0"
             app:sdMainFabClosedSrc="@drawable/ic_add_black_24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
