--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -6,4 +6,5 @@
     <!-- Stop details fab speed dial item's ids -->
     <item type="id" name="stop_details_fab_favorite"/>
     <item type="id" name="stop_details_fab_reminder"/>
+    <item type="id" name="stop_details_fab_shortcut"/>
 </resources>
