--- a/app/src/main/res/layout/destination_row.xml
+++ b/app/src/main/res/layout/destination_row.xml
@@ -4,6 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
+        style="@style/Widget.MaterialComponents.CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -18,8 +19,8 @@
             android:layout_height="wrap_content">
 
         <TextView
-                android:layout_width="120dp"
-                android:layout_height="90dp"
+                android:layout_width="100dp"
+                android:layout_height="82dp"
                 android:id="@+id/line_text"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
@@ -31,12 +32,14 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:textSize="60dp"
                 tools:ignore="SpUsage"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                />
 
         <TextView
+                android:id="@+id/destination_text"
+                android:textColor="?colorOnSurface"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/destination_text"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -47,29 +50,31 @@
                 />
 
         <TextView
+                android:id="@+id/first_time_text"
+                android:textColor="?colorOnSurface"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/destination_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/line_text"
-                android:id="@+id/first_time_text"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintBottom_toTopOf="@+id/second_time_text"
                 android:layout_marginTop="4dp"/>
 
         <TextView
+                android:id="@+id/second_time_text"
+                android:textColor="?colorOnSurface"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/second_time_text"
                 app:layout_constraintTop_toBottomOf="@+id/first_time_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/line_text"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                />
+                app:layout_constraintHorizontal_bias="0.5"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </com.google.android.material.card.MaterialCardView>
