--- a/app/src/main/res/layout/favorite_row.xml
+++ b/app/src/main/res/layout/favorite_row.xml
@@ -4,6 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
+        style="@style/Widget.MaterialComponents.CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -44,9 +45,10 @@
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
         <TextView
+                android:id="@+id/title_text_favorite"
+                android:textColor="?colorOnSurface"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/title_text_favorite"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/type_image_favorite"
