--- a/app/src/main/res/layout/favorites_destination.xml
+++ b/app/src/main/res/layout/favorites_destination.xml
@@ -12,6 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="4dp"
+            android:paddingBottom="4dp"
             android:clipToPadding="false"
             android:nestedScrollingEnabled="false"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -36,9 +37,10 @@
 
     <TextView
             android:id="@+id/no_favorites_text"
-            android:text="@string/no_favorites"
+            android:textColor="?colorOnBackground"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/no_favorites"
             app:layout_constraintTop_toBottomOf="@+id/no_favorites_animation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
