--- a/app/src/main/res/navigation/favorites_destination.xml
+++ b/app/src/main/res/navigation/favorites_destination.xml
@@ -12,7 +12,9 @@
             tools:layout="@layout/favorites_destination">
         <action
                 android:id="@+id/action_favorites_to_stopDetails"
-                app:destination="@id/stopDetails"/>
+                app:destination="@id/stopDetails"
+                app:enterAnim="@anim/fade_in"
+                app:exitAnim="@anim/fade_out"/>
     </fragment>
     <fragment
             android:id="@+id/stopDetails"
@@ -24,5 +26,8 @@
         <argument
                 android:name="stopId"
                 app:argType="string"/>
+        <deepLink
+                android:id="@+id/deepLink"
+                app:uri="launchTZ://viewStop/{stopType}/{stopId}/"/>
     </fragment>
 </navigation>
