--- a/app/src/main/res/layout/destination_row.xml
+++ b/app/src/main/res/layout/destination_row.xml
@@ -19,9 +19,10 @@
             android:layout_height="wrap_content">
 
         <TextView
+                android:id="@+id/line_text"
+                android:textColor="@color/kinda_white"
                 android:layout_width="100dp"
                 android:layout_height="82dp"
-                android:id="@+id/line_text"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
