Fixed some reminder related errors

--- a/app/src/main/res/layout/reminder_row.xml
+++ b/app/src/main/res/layout/reminder_row.xml
@@ -61,6 +61,7 @@
                     android:button="@null"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
                     android:clickable="false"
                     android:layout_weight="1"
                     android:textAlignment="center"
@@ -74,6 +75,7 @@
                     app:useMaterialThemeColors="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
                     android:clickable="false"
                     android:layout_weight="1"
                     android:button="@null"
@@ -88,6 +90,7 @@
                     app:useMaterialThemeColors="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
                     android:clickable="false"
                     android:layout_weight="1"
                     android:button="@null"
@@ -102,6 +105,7 @@
                     app:useMaterialThemeColors="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
                     android:clickable="false"
                     android:layout_weight="1"
                     android:button="@null"
@@ -116,6 +120,7 @@
                     app:useMaterialThemeColors="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
                     android:clickable="false"
                     android:layout_weight="1"
                     android:button="@null"
@@ -130,6 +135,7 @@
                     app:useMaterialThemeColors="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
                     android:clickable="false"
                     android:layout_weight="1"
                     android:button="@null"
@@ -144,6 +150,7 @@
                     app:useMaterialThemeColors="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
                     android:clickable="false"
                     android:layout_weight="1"
                     android:button="@null"
