--- a/app/src/main/res/layout/reminders_destination.xml
+++ b/app/src/main/res/layout/reminders_destination.xml
@@ -12,6 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="4dp"
+            android:paddingBottom="4dp"
             android:clipToPadding="false"
             android:nestedScrollingEnabled="false"
             app:layout_constraintBottom_toBottomOf="parent"
