--- a/app/src/main/res/layout/notification_custom.xml
+++ b/app/src/main/res/layout/notification_custom.xml
@@ -1,43 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/layout"
-                android:layout_width="fill_parent"
-                android:layout_height="100dp"
-                android:padding="10dp">
-    <ImageView
-            android:src="@drawable/ic_bus"
-            android:id="@+id/image"
-            android:layout_width="50dp"
-            android:layout_height="fill_parent"
-            android:layout_alignParentStart="true"
-            android:layout_marginEnd="10dp"/>
-    <TextView
-            style="@style/TextAppearance.Compat.Notification.Title"
-            android:id="@+id/notification_destination_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/image"
-            android:gravity="center"/>
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_toEndOf="@id/image"
-                  android:layout_below="@id/notification_destination_text">
-        <TextView
-                style="@style/TextAppearance.Compat.Notification.Info"
-                android:id="@+id/notification_first_time_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="10dp"
-                android:gravity="center"
-                android:layout_weight="1"/>
-
-        <TextView
-                style="@style/TextAppearance.Compat.Notification.Info"
-                android:id="@+id/notification_second_time_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="10dp"
-                android:gravity="center"
-                android:layout_weight="1"/>
-    </LinearLayout>
-</RelativeLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:id="@+id/reminder_destinations_container"
+              android:orientation="vertical"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:showDividers="middle"
+              android:divider="@drawable/empty_divider"
+              android:padding="8dp">
+</LinearLayout>
