--- a/app/src/main/res/layout/notification_custom_big.xml
+++ b/app/src/main/res/layout/notification_custom_big.xml
@@ -4,13 +4,15 @@
               android:layout_width="match_parent"
               android:layout_height="350dp"
               android:padding="10dp"
-android:orientation="vertical">
+              android:orientation="vertical">
+
     <RelativeLayout
-                    android:id="@+id/layout_row"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="10dp"
-    android:layout_weight="1">
+            android:id="@+id/layout_row"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp"
+            android:layout_weight="1">
+
         <ImageView
                 android:src="@drawable/ic_bus"
                 android:id="@+id/image"
@@ -18,6 +20,7 @@ android:orientation="vertical">
                 android:layout_height="16dp"
                 android:layout_alignParentStart="true"
                 android:layout_marginEnd="10dp"/>
+
         <TextView
                 style="@style/TextAppearance.Compat.Notification.Title"
                 android:id="@+id/notification_destination_text"
@@ -25,10 +28,13 @@ android:orientation="vertical">
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/image"
                 android:gravity="center"/>
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:layout_toEndOf="@id/image"
-                      android:layout_below="@id/notification_destination_text">
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/image"
+                android:layout_below="@id/notification_destination_text">
+
             <TextView
                     style="@style/TextAppearance.Compat.Notification.Info"
                     android:id="@+id/notification_first_time_text"
@@ -48,12 +54,14 @@ android:orientation="vertical">
                     android:layout_weight="1"/>
         </LinearLayout>
     </RelativeLayout>
+
     <RelativeLayout
             android:id="@+id/layout_row2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="10dp"
-    android:layout_weight="1">
+            android:layout_weight="1">
+
         <ImageView
                 android:src="@drawable/ic_tram"
                 android:id="@+id/image2"
@@ -61,6 +69,7 @@ android:orientation="vertical">
                 android:layout_height="16dp"
                 android:layout_alignParentStart="true"
                 android:layout_marginEnd="10dp"/>
+
         <TextView
                 style="@style/TextAppearance.Compat.Notification.Title"
                 android:id="@+id/notification_destination_text2"
@@ -68,10 +77,13 @@ android:orientation="vertical">
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/image2"
                 android:gravity="center"/>
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:layout_toEndOf="@id/image2"
-                      android:layout_below="@id/notification_destination_text2">
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/image2"
+                android:layout_below="@id/notification_destination_text2">
+
             <TextView
                     style="@style/TextAppearance.Compat.Notification.Info"
                     android:id="@+id/notification_first_time_text2"
