Notifications finished, also figured out how to swipe delete on the recyclerViews with cancel option

--- a/app/src/main/res/layout/notification_custom.xml
+++ b/app/src/main/res/layout/notification_custom.xml
@@ -8,4 +8,13 @@
               android:showDividers="middle"
               android:divider="@drawable/empty_divider"
               android:padding="8dp">
+
+    <TextView
+            style="@android:style/Widget.Material.TextView"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/notification_stop_title"/>
 </LinearLayout>
