--- a/app/src/main/res/layout/favorite_row.xml
+++ b/app/src/main/res/layout/favorite_row.xml
@@ -101,7 +101,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/title_text_favorite"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:orientation="horizontal"
-                android:id="@+id/lines_layout"
+                android:id="@+id/lines_layout_favorite"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="4dp"/>
