--- a/app/src/main/res/layout/map_info_window.xml
+++ b/app/src/main/res/layout/map_info_window.xml
@@ -37,7 +37,7 @@
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/type_image_info_window"
             android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toTopOf="@+id/lines_layout"
+            app:layout_constraintBottom_toTopOf="@+id/lines_layout_favorite"
             android:textAlignment="center"
             android:layout_marginStart="4dp"
             />
@@ -52,7 +52,7 @@
             android:layout_marginTop="4dp"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintTop_toBottomOf="@+id/title_text_info_window"
-            android:id="@+id/lines_layout"
+            android:id="@+id/lines_layout_favorite"
             android:gravity="start"
             android:layout_marginEnd="4dp"
             app:layout_constraintEnd_toStartOf="@+id/number_text_info_window"
@@ -71,7 +71,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             android:textAlignment="textEnd"
-            app:layout_constraintStart_toEndOf="@+id/lines_layout"
+            app:layout_constraintStart_toEndOf="@+id/lines_layout_favorite"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_weight="0"/>
