--- a/app/src/main/res/layout/reminder_row.xml
+++ b/app/src/main/res/layout/reminder_row.xml
@@ -229,7 +229,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/title_text_reminder"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:orientation="horizontal"
-                android:id="@+id/lines_layout"
+                android:id="@+id/lines_layout_favorite"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="4dp"/>
