--- a/app/src/main/res/navigation/favorites_destination.xml
+++ b/app/src/main/res/navigation/favorites_destination.xml
@@ -3,7 +3,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/favorites_destination"
-            app:startDestination="@+id/favorites">
+            app:startDestination="@id/favorites">
 
     <fragment
             android:id="@+id/favorites"
