--- a/app/src/main/res/navigation/map_destination.xml
+++ b/app/src/main/res/navigation/map_destination.xml
@@ -3,7 +3,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/map_destination"
-            app:startDestination="@+id/map">
+            app:startDestination="@id/map">
 
     <fragment
             android:id="@+id/map"
