--- a/app/src/main/res/navigation/more_destination.xml
+++ b/app/src/main/res/navigation/more_destination.xml
@@ -3,7 +3,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/more_destination"
-            app:startDestination="@+id/more">
+            app:startDestination="@id/more">
 
     <fragment
             android:id="@+id/more"
