--- a/app/src/main/res/navigation/reminders_destination.xml
+++ b/app/src/main/res/navigation/reminders_destination.xml
@@ -3,7 +3,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/reminders_destination"
-            app:startDestination="@+id/reminders"
+            app:startDestination="@id/reminders"
             tools:ignore="UnusedNavigation">
 
     <fragment
