--- a/app/src/main/res/layout/stop_row.xml
+++ b/app/src/main/res/layout/stop_row.xml
@@ -45,7 +45,7 @@
                 android:ellipsize="end"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/distance_text_stop"
                 android:textSize="14sp"/>
 
 
@@ -55,13 +55,39 @@
                 android:columnCount="7"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@id/type_image_stop"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/title_text_stop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:orientation="horizontal"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="4dp"
+                app:layout_constraintEnd_toStartOf="@+id/number_text_stop"
+                android:layout_marginEnd="8dp"/>
+
+        <TextView
+                android:id="@+id/distance_text_stop"
+                android:textColor="?colorOnSurface"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
-                android:layout_marginTop="4dp"/>
+                android:textAlignment="textEnd"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintHorizontal_weight="0"
+                android:textAppearance="@android:style/TextAppearance.Material.Small"/>
+
+        <TextView
+                android:id="@+id/number_text_stop"
+                android:textColor="?colorOnSurface"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                android:textAlignment="textEnd"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_weight="0"
+                android:textAppearance="@android:style/TextAppearance.Material.Small"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
