Line details shared view model now properly scopes to parent fragment, fixed bugs related to selecting stops and navigating, fixed bugs related to fragment recreating on configuration change, fixed extra map controls hidden under bottom sheet on line details destination and fixed cyclic navigation not saving properly on the backstack

--- a/app/src/main/res/layout/line_details_destination.xml
+++ b/app/src/main/res/layout/line_details_destination.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
             app:behavior_hideable="false"
+            app:layout_insetEdge="bottom"
             app:behavior_peekHeight="160dp">
 
         <androidx.viewpager.widget.ViewPager
