--- a/app/src/main/res/layout/destination_row.xml
+++ b/app/src/main/res/layout/destination_row.xml
@@ -37,18 +37,21 @@
                 />
 
         <TextView
+                android:gravity="center"
                 android:id="@+id/destination_text"
                 android:textColor="?colorOnSurface"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/line_text"
                 android:textAppearance="@android:style/TextAppearance.Material.Title"
+                android:textSize="18sp"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintBottom_toTopOf="@+id/first_time_text"
-                />
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"/>
 
         <TextView
                 android:id="@+id/first_time_text"
