--- a/app/src/main/res/layout/map_filters.xml
+++ b/app/src/main/res/layout/map_filters.xml
@@ -16,7 +16,7 @@
             android:id="@+id/bus_chip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="BUS"
+            android:text="@string/bus_chip"
             android:textAppearance="@android:style/TextAppearance.Material.Widget"
             app:chipIconVisible="true"
             app:checkedIconVisible="false"
@@ -27,7 +27,7 @@
             android:id="@+id/tram_chip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TRAM"
+            android:text="@string/tram_chip"
             android:textAppearance="@android:style/TextAppearance.Material.Widget"
             app:chipIconVisible="true"
             app:checkedIconVisible="false"
