--- a/app/src/main/res/navigation/favorites_destination.xml
+++ b/app/src/main/res/navigation/favorites_destination.xml
@@ -15,7 +15,7 @@
                 app:destination="@id/stopDetails"/>
     </fragment>
     <fragment
-            android:id="@id/stopDetails"
+            android:id="@+id/stopDetails"
             android:name="com.jorkoh.transportezaragozakt.destinations.stop_details.StopDetailsFragment"
             tools:layout="@layout/stop_details_destination"
             >
@@ -32,7 +32,7 @@
                 app:popUpToInclusive="true"/>
     </fragment>
     <fragment
-            android:id="@id/lineDetails"
+            android:id="@+id/lineDetails"
             android:name="com.jorkoh.transportezaragozakt.destinations.line_details.LineDetailsFragment"
             android:label="@string/line_details_title"
             tools:layout="@layout/line_details_destination">
@@ -45,5 +45,9 @@
         <action
                 android:id="@id/action_lineDetails_to_stopDetails"
                 app:destination="@id/stopDetails"/>
+        <!-- DEEP LINKS ARE BUGGED IN GOOGLE'S IMPLEMENTATION, WRONG BEHAVIOUR IF DEEP LINKING TO INITIAL GRAPH SO THIS IS THE BEST WE CAN DO-->
+        <!--<deepLink-->
+        <!--android:id="@+id/deepLinkLine"-->
+        <!--app:uri="launchTZ://viewLine/{lineType}/{lineId}/"/>-->
     </fragment>
 </navigation>
